--- a/static/wasm-wordle/index.html
+++ b/static/wasm-wordle/index.html
@@ -25,6 +25,6 @@
             <canvas id="canvas"></canvas>
         </div>
 
-        <script type="module" src="./wasm-wordle/index.js" type="application/javascript"></script>
+        <script type="module" src="./index.js" type="application/javascript"></script>
     </body>
 </html>
