Add other WASM projects

--- a/static/wasm-sudoku/index.html
+++ b/static/wasm-sudoku/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>WASM Wordle</title>
+        <title>WASM Sudoku</title>
         <style>
             html,
             body,
