--- a/static/wasm-minesweeper/index.html
+++ b/static/wasm-minesweeper/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>WASM Wordle</title>
+        <title>WASM Minesweeper</title>
         <style>
             html,
             body,
             canvas {
                 margin: 0px;
                 padding: 0px;
+                /* width: 760px;
+                height: 510px; */
                 overflow: hidden;
             }
         </style>
@@ -20,7 +22,7 @@
             <!-- <canvas id="canvas" style="width: 300px; height: 300px;" width="300" height="300"></canvas> -->
 
             <!-- Fullscreen mode: unset `height` OR\AND `width` attribute -->
-            <canvas id="canvas" width="460" height="510"></canvas>
+            <canvas id="canvas" width="760" height="510" oncontextmenu="return false;"></canvas>
         </div>
 
         <script type="module" src="./index.js" type="application/javascript"></script>
