--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -9,23 +9,29 @@
 <h1>STLtoday High School Sport StatsDB - About</h1>
 <p>During her senior year, my daughter was approaching a milestone in one of her high school sports. To calculate where she was with that, I ended up going to the
   STLtoday High School Sport Stats page <a href="https://www.stltoday.com/sports/high-school/stats/#tracking-source=main-nav">https://www.stltoday.com/sports/high-school/stats/#tracking-source=main-nav</a>
-  and copy pasting data from into a Google Sheet and creating some queries to sum up the stats. She had classmates that
+  and copy and pasting data from into a Google Sheet and creating some queries to sum up the stats. She had classmates that
   played other sports who were coming up on milestones, so I did likewise for those sports. When us software developers
   find ourselves doing something manually over and over, we seek ways to automate it. I once had contract gig where I wrote software to scrape data from various sources like
   spreadsheets and PDFs and store it in a database, scraping web pages can be relatively easy. If I can do it for one school,
-  I can do it for all schools, seasons and sports STLToday has decent stats for. Now I have this data, I would be nice to share it with others, so this little web page thingy was created.
+  I can do it for all schools, seasons and sports STLtoday has decent stats for. Now I have this data, I would be nice to share it with others, so this little web page thingy was created.
 </p>
+<p>Some other details about querying the statistics:</p>
+<ul>
+    <li><p>Queries have a limit of 250 rows returned.</p></li>
+    <li><p>TODO</p></li>
+</ul>
 <h2>Ongoing Work</h2>
 <ul>
-    <li>Already mentioned finding variances in names where is it (hopefully) obvious it is the same person and correcting
-    names to be consistent across seasons.</li>
-    <li>Adding new queries that could be interest to users.</li>
-    <li>Make this prettier and mobile friendly.</li>
+    <li><p>Already mentioned finding variances in names where is it (hopefully) obvious it is the same person and correcting
+    names to be consistent across seasons.</p></li>
+    <li><p>Adding new queries that could be interest to users.</p></li>
+    <li><p>Make this prettier and mobile friendly.</p></li>
+    <li><p>More details and better verbiage on this 'about' page.</p></li>
 </ul>
 <h2>Known Data Issues</h2>
 <p>
     These are limitations to this data. The only way to identify a player as being the same player is by name and school.
-    This causes problems if the name is different between seasons ("Joe Smith" vs "Joseph Smith"). The information
+    This causes problems if the name is different between seasons ("Joe Bagodonuts" vs "Joseph Bagodonuts"). The information
     will be corrected over time hopefully without error. Two players with identical names at the same school and same sport
     would be considered one player. There may ways to mitigate that by looking for gaps in seasons played. Players who
     transfer schools will appear as two different players. These problems are more of an issue with "Career" stats that
@@ -35,17 +41,20 @@
     Here is some other more specific known issues:
 </p>
 <ul>
-  <li>STLtoday has no stats for Alton Marquette girls soccer 2016-2017.<sub>1</sub></li>
-  <li>I know of one missing game in Hockey<sub>2</sub>. There is likely a lot of missing games across sports.</li>
+  <li><p>STLtoday has no stats for Alton Marquette girls soccer 2016-2017.<sub>1</sub></p></li>
+  <li><p>I know of one missing game in Hockey.<sub>2</sub> There is likely a lot of missing games across sports.</p></li>
 </ul>
 <hr/>
-<h2>Technical Information - TODO</h2>
-<p>User that have knowledge of SQL can enter or edit existing queries</p>
-
-<ul>Footnotes</ul>
-    <li>[1] - Bummer it was my niece's senior season.</li>
-    <li>[2] - My son scored his first goal as a freshman in it.
-        The other sport I am most familiar with, Girls Volleyball, seems to have pretty complete stats.
+<h2>Technical Information</h2>
+<p>User that have knowledge of SQL can enter or edit existing queries. Here are descriptions of the database used
+    by the sports and the tables and columns defined:</p>
+<p>TODO</p>
+<h4>Footnotes</h4>
+<ul>
+    <li class="footnote">[1] Unfortunately it was my niece's senior season.</li>
+    <li class="footnote">[2] My son scored his first goal as a freshman in it.
+        The other sport I am most familiar with, girls volleyball, seems to have pretty complete stats.
     </li>
+</ul>
 </body>
 </html>
