--- a/static/stltodaystats/index.html
+++ b/static/stltodaystats/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf8" />
   <link rel='stylesheet' type='text/css' href='styles.css'>
-  <title>STLtoday High School Sport Stats DB</title>
+  <title>STLtoday High School Sports Stats DB</title>
 </head>
 <script src='./sql-wasm.js'></script>
 <script>
