--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -39,12 +39,52 @@
 <ul>
   <li><p>STLtoday has no stats for Alton Marquette girls soccer 2016-2017.<sub>1</sub></p></li>
   <li><p>I know of one missing game in Hockey.<sub>2</sub> There is likely a lot of missing games across sports.</p></li>
+  <li>
+    <p>I first noticed that STLtoday has no stats for Alton Marquette girls soccer in 2016-2017.<sub>1</sub>There are many missing seasons for various schools and sports. Sometimes, it is likely that the school was small and perhaps didn't field a team that year or it was the pandemic. There are definitely some are conspicuous like private Catholic schools missing soccer seasons. For some sports, MaxPreps may have some stats that can "massaged" and fed into the database.<sub>3</sub>I'll be going through the "gaps" (missing seasons interspersed with seasons with stats) first determining that the season was played and try to find an alterative source of stats.
+    <p>Known gaps that can be or have been addressed:</p>
+    <table class="gaps">
+        <tr><th colspan="3">Girls Volleyball</th></tr>
+        <tr><td>Belleville East</td><td>2021-2022</td><td>TODO - https://www.maxpreps.com/il/belleville/belleville-east-lancers/volleyball/21-22/stats/<td></td></tr>
+        <tr><td>Mehlville</td><td>2016-2017</td><td>TODO - https://www.maxpreps.com/mo/st-louis/mehlville-panthers/volleyball/16-17/stats/</td></tr>
+        <tr><td>MICDS</td><td>2017-2018</td><td>TODO - https://www.maxpreps.com/mo/st-louis/micds-rams/volleyball/17-18/stats/</td></tr>
+        <tr><td>Pacific</td><td>2022-2023</td><td>DONE - Populated from MaxPreps</td></tr>
+        <tr><td>Parkway Central</td><td>2020-2021</td><td>DONE - Populated from MaxPreps</td></tr>
+        <tr><td>Windsor (Imperial)</td><td>2019-2020</td><td>TODO - https://www.maxpreps.com/mo/imperial/windsor-owls/volleyball/19-20/stats/</td></tr>
+        <tr><td>Windsor (Imperial)</td><td>2020-2021</td><td>TODO - https://www.maxpreps.com/mo/imperial/windsor-owls/volleyball/20-21/stats/</td></tr>
+     
+    </table>
+
+    <p>Known gaps without known resolution:</p>
+    <table class="gaps">
+        <tr><th colspan="3">Girls Soccer</th></tr>
+        <tr><td>Alton Marquette</td><td>2016-2017</td></tr>
+        <tr><td>Borgia</td><td>2017-2018</td></tr>
+        <tr><td>Ursuline</td><td>2017-2018</td></tr>
+
+        <tr><td colspan="3">Girls Volleyball</td></tr>
+        <tr><td>DuBourg</td><td>2006-2007</td><td>MaxPreps does not go back that far</td></tr>
+        <tr><td>DuBourg</td><td>2007-2008</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>DuBourg</td><td>2020-2021</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Fort Zumwalt North</td><td>2017-2018</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Fox</td><td>2013-2014</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Highland</td><td>2021-2022</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Mehlville</td><td>2021-2022</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>MICDS</td><td>2018-2019</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Notre Dame</td><td>2012-2013</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Notre Dame</td><td>2013-2014</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Orchard Farm</td><td>2012-2013</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Pacific</td><td>2007-2008</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Parkway Central</td><td>2003-2004</td><td>MaxPreps does not go back that far</td></tr>
+        <tr><td>St. Joseph's</td><td>2000-2001</td><td>MaxPreps does not go back that far</td></tr>
+        <tr><td>Visitation</td><td>2007-2008</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Visitation</td><td>2008-2009</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Webster Groves</td><td>2020-2021</td><td>MaxPreps has no stats</td></tr>
+    </table>
 </ul>
 <hr/>
 <h2>Technical Information</h2>
-<p>User that have knowledge of SQL can enter or edit existing queries. Here are descriptions of the databases used
-    by the sports and the tables and columns defined:</p>
-<!--p>
+<!--User that have knowledge of SQL can enter or edit existing queries. Here are descriptions of the databases used by the sports and the tables and columns defined:</p>
+<p>
     All tables across sports have the following columns:
 </p>
     <table>
@@ -86,6 +126,7 @@
     <li class="footnote">[2] My son scored his first goal as a freshman in it.
         The other sport I am most familiar with, girls volleyball, seems to have pretty complete stats.
     </li>
+    <li class="footnote">[3] MaxPreps stats are not behind a paywall either. STLtoday stats are easier to "scrape".</li>
 </ul>
 </body>
 </html>
