--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -33,18 +33,22 @@
     <li><p>Make this prettier and mobile friendly.</p></li>
     <li><p>More details and better verbiage on this 'About' page.</p></li>
 </ul>
-<p>
-    Here is some other more specific known issues:
-</p>
-<ul>
-  <li><p>STLtoday has no stats for Alton Marquette girls soccer 2016-2017.<sub>1</sub></p></li>
-  <li><p>I know of one missing game in Hockey.<sub>2</sub> There is likely a lot of missing games across sports.</p></li>
+<h2>Missing Data:</h2>
+<ul>  
   <li>
-    <p>I first noticed that STLtoday has no stats for Alton Marquette girls soccer in 2016-2017.<sub>1</sub>There are many missing seasons for various schools and sports. Sometimes, it is likely that the school was small and perhaps didn't field a team that year or it was the pandemic. There are definitely some are conspicuous like private Catholic schools missing soccer seasons. For some sports, MaxPreps may have some stats that can "massaged" and fed into the database.<sub>3</sub>I'll be going through the "gaps" (missing seasons interspersed with seasons with stats) first determining that the season was played and try to find an alterative source of stats.
+    <p>I first noticed that STLtoday has no stats for Alton Marquette girls soccer in 2016-2017.<sub>1</sub>There are many missing seasons for various schools and sports. Sometimes, it is likely that the school was small and perhaps didn't field a team that year or it was the pandemic. There are definitely some are conspicuous like private Catholic schools missing soccer seasons. For some sports, MaxPreps may have some stats that can "massaged" and fed into the database.<sub>2</sub>I'll be going through the "gaps" (missing seasons interspersed with seasons with stats) first determining that the season was played and try to find an alterative source of stats.
     <p>Known gaps that can be or have been addressed:</p>
     <table class="gaps">
+        <tr><th colspan="3">Baseball</th></tr>
+        <tr><td>Alton Marquette</td><td>2014-15</td><td>TODO - https://www.maxpreps.com/il/alton/marquette-catholic-explorers/baseball/13-14/stats/</td></tr>
+
+
+        <tr><th colspan="3">Girls Basketball</th></tr>
+        <tr><td>Vashon</td><td>2016-17</td><td>TODO - https://www.maxpreps.com/mo/st-louis/vashon-wolverines/basketball/girls/16-17/stats/</td></tr>
+
+
         <tr><th colspan="3">Girls Volleyball</th></tr>
-        <tr><td>Belleville East</td><td>2021-2022</td><td>TODO - https://www.maxpreps.com/il/belleville/belleville-east-lancers/volleyball/21-22/stats/<td></td></tr>
+        <tr><td>Belleville East</td><td>2021-2022</td><td>TODO - https://www.maxpreps.com/il/belleville/belleville-east-lancers/volleyball/21-22/stats/</td></tr>
         <tr><td>Mehlville</td><td>2016-2017</td><td>TODO - https://www.maxpreps.com/mo/st-louis/mehlville-panthers/volleyball/16-17/stats/</td></tr>
         <tr><td>MICDS</td><td>2017-2018</td><td>TODO - https://www.maxpreps.com/mo/st-louis/micds-rams/volleyball/17-18/stats/</td></tr>
         <tr><td>Pacific</td><td>2022-2023</td><td>DONE - Populated from MaxPreps</td></tr>
@@ -56,12 +60,29 @@
 
     <p>Known gaps without known resolution:</p>
     <table class="gaps">
-        <tr><th colspan="3">Girls Soccer</th></tr>
-        <tr><td>Alton Marquette</td><td>2016-2017</td></tr>
-        <tr><td>Borgia</td><td>2017-2018</td></tr>
-        <tr><td>Ursuline</td><td>2017-2018</td></tr>
+        <tr><th colspan="3">Baseball</th></tr>
+        <tr><td>DuBourg</td><td>2018-19</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>DuBourg</td><td>2018-19</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Herculaneum</td><td>2013-14</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Hillsboro</td><td>2015-16</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>St. Mary's</td><td>2014-15</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Whitfield</td><td>2013-14</td><td>MaxPreps has no stats</td></tr>
 
-        <tr><td colspan="3">Girls Volleyball</td></tr>
+        <tr><th colspan="3">Boys Basketball</th></tr>
+        <tr><td>Normandy</td><td>2015-16</td><td>MaxPreps has no stats</td></tr>
+
+        <tr><th colspan="3">Girls Basketball</th></tr>
+        <tr><td>Festus</td><td>2012-13</td><td>MaxPreps has no stats</td></tr>
+
+        <tr><th colspan="3">Hockey</th></tr>
+        <tr><td>Summit</td><td>2009-10</td><td>MaxPrep no - MidStates doesn't go back that far</td></tr>
+
+        <tr><th colspan="3">Girls Soccer</th></tr>
+        <tr><td>Alton Marquette</td><td>2016-2017</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Borgia</td><td>2017-2018</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Ursuline</td><td>2017-2018</td><td>MaxPreps has no stats</td></tr>
+
+        <tr><th colspan="3">Girls Volleyball</th></tr>
         <tr><td>DuBourg</td><td>2006-2007</td><td>MaxPreps does not go back that far</td></tr>
         <tr><td>DuBourg</td><td>2007-2008</td><td>MaxPreps has no stats</td></tr>
         <tr><td>DuBourg</td><td>2020-2021</td><td>MaxPreps stats empty</td></tr>
@@ -80,10 +101,12 @@
         <tr><td>Visitation</td><td>2008-2009</td><td>MaxPreps stats empty</td></tr>
         <tr><td>Webster Groves</td><td>2020-2021</td><td>MaxPreps has no stats</td></tr>
     </table>
+    <li><p>I know of one missing game in Hockey.<sub>3</sub> There is likely a lot of missing games across sports just like missing seasons.</p></li>
 </ul>
 <hr/>
 <h2>Technical Information</h2>
-<!--User that have knowledge of SQL can enter or edit existing queries. Here are descriptions of the databases used by the sports and the tables and columns defined:</p>
+<p>For those who know <a href="https://en.wikipedia.org/wiki/SQL">SQL</a>.</p>
+<!--pUser that have knowledge of SQL can enter or edit existing queries. Here are descriptions of the databases used by the sports and the tables and columns defined:</p>
 <p>
     All tables across sports have the following columns:
 </p>
@@ -123,10 +146,8 @@
 <h4>Footnotes</h4>
 <ul>
     <li class="footnote">[1] Unfortunately it was my niece's senior season.</li>
-    <li class="footnote">[2] My son scored his first goal as a freshman in it.
-        The other sport I am most familiar with, girls volleyball, seems to have pretty complete stats.
-    </li>
-    <li class="footnote">[3] MaxPreps stats are not behind a paywall either. STLtoday stats are easier to "scrape".</li>
+    <li class="footnote">[2] MaxPreps stats are not behind a paywall either. STLtoday stats are easier to "scrape".</li>
+    <li class="footnote">[3] My son scored his first goal as a freshman in it.</li>    
 </ul>
 </body>
 </html>
