Corrected title and added "gaps"

--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -6,7 +6,7 @@
     <title>STLtoday High School Sports Stats DB - About</title>
 </head>
 <body>
-<h1>STLtoday High School Sport StatsDB - About</h1>
+<h1>STLtoday High School Sports StatsDB - About</h1>
 <p>During her senior year, my daughter was approaching a milestone in one of her high school sports. To calculate where she was on attaining it, I would up go to the STLtoday High School Sport Stats page <a href="https://www.stltoday.com/sports/high-school/stats/#tracking-source=main-nav">https://www.stltoday.com/sports/high-school/stats/#tracking-source=main-nav</a> and copy and paste data from into a Google Sheet and creating some queries to sum up the stats. She had classmates that played other sports who were coming up on milestones, so I did likewise for those sports. When us software developers find ourselves doing something manually over and over, we seek ways to automate it. I once had contract gig that involved writing software to scrape data from various sources like spreadsheets and PDFs and store it in a database, scraping web pages can be relatively easy. If I can do it for one school, I can do it for all schools, seasons and sports that STLtoday has decent stats for. Now I have this data, I would be nice to share it with others, so this little web page thing was created.
 </p>
 <p>Some other details about querying the statistics:</p>
@@ -73,6 +73,11 @@
 
         <tr><th colspan="3">Girls Basketball</th></tr>
         <tr><td>Festus</td><td>2012-13</td><td>MaxPreps has no stats</td></tr>
+
+        <tr><th colspan="3">Football</th></tr>
+        <tr><td>Edwardsville</td><td>2003-04</td><td>One year too far back for MaxPreps</td></tr>
+        <tr><td>Sumner</td><td>2010-11</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Vashon</td><td>2018-19</td><td>MaxPreps has no stats</td></tr>
 
         <tr><th colspan="3">Hockey</th></tr>
         <tr><td>Summit</td><td>2009-10</td><td>MaxPrep no - MidStates doesn't go back that far</td></tr>
