--- a/static/stltodaystats/index.html
+++ b/static/stltodaystats/index.html
@@ -218,7 +218,7 @@
 
 </script>
 <body onload="init()">
-  <h1>STLtoday High School Sport StatsDB<a href="about.html">About</a></h1>
+  <h1>STLtoday High School Sports StatsDB<a href="about.html">About</a></h1>
 
   <p>Sport:
     <select id="selectSport">
