Name cleanup, new queries, updated basketball stats

--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -25,6 +25,14 @@
         <p>Players who transfer schools will appear as two different players. These problems are more of an issue with "Career" stats that span seasons.
         </p>
     </li>
+    <li>
+        <p>For basketball, I tried feature a query where the three point shot percentage was calculated. However,
+            many times the number of attempts was omitted or somehow a player has more shots made than attempts.
+            I'm thinking sometimes it is entered as "made-attempts" and others as "made-missed".
+            I ended up removing those queries which is unfortunate since that would be an interesting stat.
+
+        </p>
+    </li>
 </ul>
 <h2>Ongoing Work</h2>
 <ul>
